--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -1,2 +1,5 @@
 services/prereq-file-writer.js
 services/prereqs.txt
+services/course-list-file-writer.js
+services/course-list.txt
+services/course-name-list.txt
