More work to try to connect to db

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,13 +2,17 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-sdk": "latest",
+    "body-parser": "latest",
+    "ejs": "latest",
+    "express": "latest",
+    "mysql": "^2.18.1",
     "vue": "^3.4.21"
   },
   "devDependencies": {
